--- a/package/crds/cloudrun.gcp.upbound.io_v2jobs.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2jobs.yaml
@@ -2669,7 +2669,8 @@ spec:
                             type: string
                           maxRetries:
                             description: Number of retries allowed per Task, before
-                              marking this Task failed.
+                              marking this Task failed. Defaults to 3. Minimum value
+                              is 0.
                             type: number
                           serviceAccount:
                             description: Email address of the IAM service account
@@ -3357,7 +3358,8 @@ spec:
                             type: string
                           maxRetries:
                             description: Number of retries allowed per Task, before
-                              marking this Task failed.
+                              marking this Task failed. Defaults to 3. Minimum value
+                              is 0.
                             type: number
                           serviceAccount:
                             description: Email address of the IAM service account
@@ -4264,7 +4266,8 @@ spec:
                             type: string
                           maxRetries:
                             description: Number of retries allowed per Task, before
-                              marking this Task failed.
+                              marking this Task failed. Defaults to 3. Minimum value
+                              is 0.
                             type: number
                           serviceAccount:
                             description: Email address of the IAM service account
